# uv-docs-mcp

./: .gitignore  README.md  pyproject.toml
src/uv_docs/: cache.py  prompts.py  resources.py  server.py  tools.py
src/uv_docs/tools/: __init__.py  cache.py  docs.py  search.py
