[project]
name = "uv-docs"
version = "0.1.0"
description = "A UV Documentation MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "mcp>=1.4.1",]
[[project.authors]]
name = "StevenBtw"
email = "stevengrond@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
uv-docs = "uv_docs:main"
